Version 0.0.4
- Can define function 'init' which will be called if arguments are supplied to the constructor.

Version 0.0.3

- Access self inside class definitions also for private objects.

Version 0.0.2

- Inheritance: Replacing members of parent is possible.
- Fix in package-tests, as there are some problems on CRAN.
- class oom is now VIRTUAL.
- summary method for oom.
- modified show method.